get current_user added
